--- a/imagersite/imagersite/templates/imagersite/base.html
+++ b/imagersite/imagersite/templates/imagersite/base.html
@@ -3,11 +3,14 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title></title>
+    <title>Djimager</title>
     <link rel="stylesheet" href="">
 </head>
 <body>
     <nav><a href="{% url 'home' %}"> home </a><a href="{% url 'login' %}"> login/logout </a><a href="{% url 'registration_register' %}"> register </a></nav>
+    {% if request.user.is_authenticated %}
+        <h2>Hello {{ request.user.username }}</h2>
+    {% endif %}
     {% block content %}
         
     {% endblock content %}
