Frontend work. Added some bootstrap templates and CSS, added profile views.

--- a/imagersite/imagersite/templates/imagersite/home.html
+++ b/imagersite/imagersite/templates/imagersite/home.html
@@ -1,6 +1,7 @@
+
 {% extends "imagersite/base.html" %}
 {% block content %}
-<h1>Djimager home page.</h1>
-<img src="http://www.trbimg.com/img-5930469a/turbine/la-sp-mr-met-middle-finger-incident-20170531" alt="Mr. Met">
+<h1></h1>
+<img id="home_image" src="http://www.trbimg.com/img-5930469a/turbine/la-sp-mr-met-middle-finger-incident-20170531" alt="Mr. Met">
     
 {% endblock content %}
