--- a/imagersite/imagersite/templates/imagersite/base.html
+++ b/imagersite/imagersite/templates/imagersite/base.html
@@ -4,13 +4,42 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Djimager</title>
-    <link rel="stylesheet" href="">
+    <link rel="stylesheet" href="https://bootswatch.com/4/flatly/bootstrap.min.css">
+    {% load static %}
+    <link rel="stylesheet" href="{% static 'imagersite/style.css' %}">
 </head>
 <body>
-    <nav><a href="{% url 'home' %}"> home </a><a href="{% url 'login' %}"> login/logout </a><a href="{% url 'registration_register' %}"> register </a></nav>
-    {% if request.user.is_authenticated %}
-        <h2>Hello {{ request.user.username }}</h2>
-    {% endif %}
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+  <a class="navbar-brand" href="{% url 'home' %}">Djimager</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+  <div class="collapse navbar-collapse" id="navbarColor01">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item active">
+        <a class="nav-link" href="{% url 'home' %}">Home<span class="sr-only"></span></a>
+      </li>
+      <li class="nav-item">
+        {% if request.user.is_authenticated %}
+            <a class="nav-link" href="{% url 'logout' %}">Logout</a>
+        {% endif %}
+        {% if not request.user.is_authenticated %}
+            <a class="nav-link" href="{% url 'login' %}">Login</a>
+        {% endif %}
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="{% url 'registration_register' %}">Register</a>
+      </li>
+
+      {% if request.user.is_authenticated %}
+        <li class="nav-item">
+            <a class="nav-link" href="{% url 'profile' %}"><h6 id="logged_in" class="text-success">{{ request.user.username }} is currently logged in</h6></a>
+        </li>
+      {% endif %}
+    </ul>
+  </div>
+</nav>
     {% block content %}
         
     {% endblock content %}
