--- a/imagersite/imager_profile/templates/imager_profile/profile.html
+++ b/imagersite/imager_profile/templates/imager_profile/profile.html
@@ -2,7 +2,9 @@
 {% block content %}
 {% if request.user.is_authenticated %}
     <h2 id="profile_header">
-    <button type="button" class="btn btn-warning">Update</button></h2>
+    <button type="button" class="btn btn-warning">Update</button>
+    <a href="{% url 'library' %}"><button type="button" class="btn btn-success">Library</button></a>
+    </h2>
     <ul id="bio_left" class="list-group">
         <li class="list-group-item">Username: {{ request.user.username }}</li>
         <li class="list-group-item">First name: {{ request.user.firstname }}</li>
@@ -23,11 +25,11 @@
     <div id="bio_right" class="card">
         <h3 class="card-header"></h3>
         <img style="width: 100%; display: block;" src="http://www.trbimg.com/img-5930469a/turbine/la-sp-mr-met-middle-finger-incident-20170531" alt="Card image">
+
         <div class="card-body">
             <p class="card-text">Bio: {{ request.user.profile.bio }}</p>
             <p class="card-text">Album count: {{ request.user.profile.album.count }}</p>
             <p class="card-text">Photo count: {{ request.user.profile.photo.count }}</p>
-
         </div>
         <div class="card-footer text-muted">
         </div>
