--- a/imagersite/imager_profile/templates/imager_profile/profile.html
+++ b/imagersite/imager_profile/templates/imager_profile/profile.html
@@ -3,7 +3,7 @@
 {% if request.user.is_authenticated %}
     <h2 id="profile_header">
     <button type="button" class="btn btn-warning">Update</button>
-    <a href="{% url 'library' username=request.user.username %}"><button type="button" class="btn btn-success">Library</button></a>
+    <a href="{% url 'library' %}"><button type="button" class="btn btn-success">Library</button></a>
     </h2>
     <ul id="bio_left" class="list-group">
         <li class="list-group-item">Username: {{ request.user.username }}</li>
